Доработал ошибки в тесты Postman в классах, интерфейсах и изменил порт